Create Threads Image Downloads and Add pushArray functions to Parse Class